deploys/mxb.cc-web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mxb-cc
  name: mxb-cc
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mxb-cc
  template:
    metadata:
      labels:
        app: mxb-cc
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: mxbcc/mxb.cc-web:master
          imagePullPolicy: IfNotPresent
          name: mxb-cc
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/.env.production
              name: volume-config
              subPath: .env.production
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: .env.production
                path: .env.production
            name: mxb-cc-configmap
          name: volume-config
