deploys/mxb.cc-web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mxb-cc-service
  namespace: default
spec:
  clusterIP: None
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: mxb-cc
  type: ClusterIP
